# ynab-mbank-transactions

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  app.py  main.py  pyproject.toml  setup.cfg
ynab/: api_client.py  importers.py  models.py  resolver.py
